--- a/content/blog/2019-12-11-Cron.md
+++ b/content/blog/2019-12-11-Cron.md
@@ -1,15 +1,16 @@
 ---
 layout: page
-title:  "I used cron for the first time"
-description: "And I didn't die"
-date:   2019-12-11
+title: I used cron for the first time
+description: And I didn't die
+date: 2019-12-11
 tags: random
-redirect_from: 
- - /post/cd9dj84kf0/
- - /cd9dj84kf0/
-aliases: [/blog/2019/12/11/cron]
+redirect_from:
+- /post/cd9dj84kf0/
+- /cd9dj84kf0/
+aliases:
+- /blog/2019/12/11/cron
+- /blog/cron
 ---
-
 
 [Cron](https://en.wikipedia.org/wiki/Cron) has always been one of those "scary sysadmin things" in my head. But today, I finally used it!
 
