--- a/content/blog/2020-04-20-LudumDare46.md
+++ b/content/blog/2020-04-20-LudumDare46.md
@@ -1,21 +1,22 @@
 ---
 layout: page
-title: "Ludum Dare 46: Jamming with friends"
+title: 'Ludum Dare 46: Jamming with friends'
 description: Recapping the development of *Micromanaged Mike*
 date: 2020-04-20
 tags:
-  - gamejam
-  - ldjam
-  - javascript
-  - project
+- gamejam
+- ldjam
+- javascript
+- project
 redirect_from:
-  - /post/ebsdjtd9/
-  - /ebsdjtd9/
+- /post/ebsdjtd9/
+- /ebsdjtd9/
 aliases:
-  - /blog/2020/04/20/ludumdare46
+- /blog/2020/04/20/ludumdare46
+- /blog/ludumdare46
 extra:
   uses:
-    - twitter
+  - twitter
   excerpt: A look back at the development of Micromanaged Mike
 ---
 
