--- a/content/blog/2022-04-06-udm-fan.md
+++ b/content/blog/2022-04-06-udm-fan.md
@@ -4,11 +4,14 @@ title: Making my UDM-Pro scream
 description: Remote fan control for the Unifi Dream Machine Pro
 date: 2022-04-06
 tags:
-  - random
-  - hardware
+- random
+- hardware
 draft: false
 extra:
-  excerpt: A project review post covering my work on remote-control for the UDM-Pro cooling system
+  excerpt: A project review post covering my work on remote-control for the UDM-Pro
+    cooling system
+aliases:
+- /blog/udm-fan
 ---
 
 [Ubiquiti](https://www.ui.com/)'s [Unifi Dream Machine Pro](https://www.ubnt.com/products/unifi-dream-machine-pro) is a powerful medium-scale business-oriented rack-mount router, capable of handling 10/100/1000/10000 ethernet traffic. Really quite a nice device.
