--- a/content/blog/2022-05-21-nanovna.md
+++ b/content/blog/2022-05-21-nanovna.md
@@ -1,17 +1,19 @@
 ---
 layout: page
-title: "Field Log: First look at the NanoVNA"
+title: 'Field Log: First look at the NanoVNA'
 description: Weekends are prime radio time
 date: 2022-05-21
 tags:
-  - radio
-  - random
-  - nanovna
-  - product
+- radio
+- random
+- nanovna
+- product
 draft: false
 extra:
   auto_center_images: true
   excerpt: I went out in the field and tried out my brand new NanoVNA.
+aliases:
+- /blog/nanovna
 ---
 
 Today I had a rather anticipated package arrive in the mail.. a NanoVNA! For anyone unfamiliar with the NanoVNA, it is a *small* and cheap [Vector Network Analyzer](https://en.wikipedia.org/wiki/Network_analyzer_(electrical)). 
