--- a/content/blog/2022-06-08-bell-ipv6.md
+++ b/content/blog/2022-06-08-bell-ipv6.md
@@ -1,14 +1,17 @@
 ---
 layout: page
-title: "How I hacked full IPv6 support into a Bell residential network" 
-description: "Circumventing nearly everything my ISP has set up in the name of public IPv6 addresses for my friends"
+title: How I hacked full IPv6 support into a Bell residential network
+description: Circumventing nearly everything my ISP has set up in the name of public
+  IPv6 addresses for my friends
 date: 2022-06-08
 tags: networking
 draft: true
 extra:
-  
   auto_center_images: true
-  excerpt: I used multiple layers of IP encapsulation to evade an upstream firewall in the name of IPv6.
+  excerpt: I used multiple layers of IP encapsulation to evade an upstream firewall
+    in the name of IPv6.
+aliases:
+- /blog/bell-ipv6
 ---
 
 > At this point, I feel like I should actually just start my own ISP.
