--- a/content/blog/2023-02-07-ipv6-canvas.md
+++ b/content/blog/2023-02-07-ipv6-canvas.md
@@ -4,13 +4,16 @@ title: Blatant self-advertising on the IPv6 Canvas
 description: An ungodly amount of pings for a small bitmap
 date: 2023-02-07
 tags:
-  - random
+- random
 draft: false
 extra:
   auto_center_images: true
-  excerpt: Using some python, I have a reference to this website semi-permanently implanted on the IPv6 Canvas
+  excerpt: Using some python, I have a reference to this website semi-permanently
+    implanted on the IPv6 Canvas
   discuss:
     reddit: https://www.reddit.com/r/ewpratten/comments/12xzvf9/blatant_selfadvertising_on_the_ipv6_canvas/
+aliases:
+- /blog/ipv6-canvas
 ---
 
 Yesterday, the [IPv6 Canvas](https://blog.tugzrida.xyz/2023/02/06/introducing-the-ipv6-canvas/) was pushed to the public.
@@ -37,4 +40,3 @@ This script is executed via a Cron job on one of my edge routers for maximum IP 
 ### Why ping?
 
 I considered doing this with some clever `mtr` commands, or even crafting the ICMP ECHO packets straight from the script, but that was slightly too much work for the 5 minutes I had before work this morning.
-
