--- a/content/blog/2019-06-27-PWNlink.md
+++ b/content/blog/2019-06-27-PWNlink.md
@@ -4,10 +4,11 @@ title: I had some fun with a router
 description: cleartext passwords + external management = death wish
 date: 2019-06-27
 tags:
-  - project
-  - cybersecurity
+- project
+- cybersecurity
 aliases:
-  - /blog/2019/06/27/pwnlink
+- /blog/2019/06/27/pwnlink
+- /blog/pwnlink
 ---
 
 I was playing around with some D-link routers today and remembered an [ExploitDB Entry](https://www.exploit-db.com/exploits/33520) I read a while ago. Many D-link routers have a great feature that allows remote management and configuration queries. Interestingly, this cannot be disabled, and one of the pages contains a cleartext version of the admin password (yay!).
