--- a/content/blog/2022-06-13-fedora-36-vp.md
+++ b/content/blog/2022-06-13-fedora-36-vp.md
@@ -4,13 +4,15 @@ title: Getting Visual Paradigm to launch on Fedora 36
 description: Bundle your libraries correctly, kids
 date: 2022-06-13
 tags:
-  - random
-  - tutorial
-  - reference
+- random
+- tutorial
+- reference
 draft: false
 extra:
   auto_center_images: true
   excerpt: A quick guide on launching Visual Paradigm on Fedora 36
+aliases:
+- /blog/fedora-36-vp
 ---
 
 When installing [Visual Paradigm](https://www.visual-paradigm.com/) on my Fedora workstation today, I kept running into a `SIGSEGV` error, causing the bundled JVM to crash.
