--- a/content/blog/2023-06-16-nat64.md
+++ b/content/blog/2023-06-16-nat64.md
@@ -1,17 +1,17 @@
 ---
 layout: page
-title: "How I set up NAT64" 
-description: "Working towards single-stack inside AS54041"
+title: How I set up NAT64
+description: Working towards single-stack inside AS54041
 date: 2023-06-16
 tags: networking
 draft: true
 extra:
   auto_center_images: true
-  excerpt: "Information on how I set up NAT64 inside AS54041"
-  # discuss:
-  #   reddit: https://www.reddit.com/r/ewpratten/comments/1356u1t/i_performed_a_button_swap_on_my_mouse/
-  #   hacker_news: https://news.ycombinator.com/item?id=35781662
-  uses: [mermaid]
+  excerpt: Information on how I set up NAT64 inside AS54041
+  uses:
+  - mermaid
+aliases:
+- /blog/nat64
 ---
 
 Somewhere along the way of setting up AS54041 over the past few years I stumbled across a reference to [NAT64](https://en.wikipedia.org/wiki/NAT64).
@@ -72,4 +72,3 @@ graph LR
 ## How I set up NAT64 on a Debian-based router
 
 ## Final Remarks
-
