--- a/content/blog/2022-08-17-as398057.md
+++ b/content/blog/2022-08-17-as398057.md
@@ -15,6 +15,6 @@ aliases:
 - /blog/as398057
 ---
 
-Last year, I [dipped my toes in BGP](/blog/amprnet-bgp) while learning how to set up the infrastructure needed to route a public IPv4 address prefix to the world. A lot has changed since then, and I have fallen further into the world of network engineering and backbone routing.
+Last year, I [dipped my toes in BGP](@/blog/2021-11-14-amprnet-bgp.md) while learning how to set up the infrastructure needed to route a public IPv4 address prefix to the world. A lot has changed since then, and I have fallen further into the world of network engineering and backbone routing.
 
 At the time of writing my last post, I had been singlehomed on [Vultr](https://www.vultr.com/)'s network via their *byoip* (Bring Your Own IP) plan, and was peering with them using one of their private ASNs.
