--- a/content/products/vcvrack/a10u8r.md
+++ b/content/products/vcvrack/a10u8r.md
@@ -1,8 +1,11 @@
 ---
 title: "A10U8R: Signal Attenuator"
-description: "A small, but helpful module for VCV Rack 2"
+description: A small, but helpful module for VCV Rack 2
 extra:
-  uses: [katex]
+  uses:
+    - katex
+tags:
+  - music
 ---
 
 [![Download Plugin](https://img.shields.io/badge/-download-darkgreen)](https://github.com/Ewpratten/A10U8R/releases/latest)
