--- a/content/blog/2019-07-15-MindMap.md
+++ b/content/blog/2019-07-15-MindMap.md
@@ -4,11 +4,12 @@ title: Mind map generation with Python
 description: Step 1
 date: 2019-07-15
 tags:
-- project
-- python
+  - project
+  - python
+  - school
 aliases:
-- /blog/2019/07/15/mindmap
-- /blog/mindmap
+  - /blog/2019/07/15/mindmap
+  - /blog/mindmap
 ---
 
 While working on an assignment with [Coggle](https://coggle.it) today, I noticed an interesting option in the save menu. *Download as .mm file*. Having rarely worked with mind maps before, and only doing it online, it never occured to me that someone would have a file format for it. So I took a look.
