Add a script for generating preview images

--- a/content/photography/2020-07-19-my-desk.md
+++ b/content/photography/2020-07-19-my-desk.md
@@ -2,7 +2,7 @@
 title: My Desk
 date: 2020-07-19
 extra:
-    cover_image: /photos/2020-07-19-my-desk.png
+    cover_image: /photos/2020-07-19-my-desk.preview.png
 ---
 
 ![My Desk](/photos/2020-07-19-my-desk.png)
