--- a/content/photography/2020-07-23-two-cars.md
+++ b/content/photography/2020-07-23-two-cars.md
@@ -2,7 +2,7 @@
 title: Two Cars
 date: 2020-07-23
 extra:
-    cover_image: /photos/2020-07-23-two-cars.png
+    cover_image: /photos/2020-07-23-two-cars.preview.png
 ---
 
 ![Two Cars](/photos/2020-07-23-two-cars.png)
