Cleanup of external assets

--- a/content/blog/2022-12-07-gamels.md
+++ b/content/blog/2022-12-07-gamels.md
@@ -21,6 +21,6 @@ Linux gamers may be familiar with digging around the `copmpatdata` and `shaderca
 
 `gamels` solves this problem by querying the Steam API to see if any directory names match known app ids. If so, the name of the corresponding game is shown in the listing.
 
-![A screenshot of gamels in action](https://raw.githubusercontent.com/ewpratten/gamels/master/steamdeck-screenshot.png)
+![A screenshot of gamels in action](/images/posts/gamels/steamdeck-screenshot.png)
 
 Installation instructions and source code are available on [GitHub](https://github.com/ewpratten/gamels).
