FIx image paths

--- a/src/_drafts/2023-11-23-pid.md
+++ b/src/_drafts/2023-11-23-pid.md
@@ -16,11 +16,11 @@ aliases:
 
 We are here.
 
-<img src="/images/posts/pid/here.svg" style="margin: 2em auto;" />
+<img src="/assets/blog/pid/here.svg" style="margin: 2em auto;" />
 
 And we want to go there.
 
-<img src="/images/posts/pid/here_there.svg" style="margin: 2em auto;" />
+<img src="/assets/blog/pid/here_there.svg" style="margin: 2em auto;" />
 
 ## Figuring out how to get there
 
@@ -30,17 +30,17 @@ I suppose a good place to start is checking to see if *here* and *there* are in 
 
 Are we there?
 
-<img src="/images/posts/pid/are_we_there.svg" style="margin: 2em auto;" />
+<img src="/assets/blog/pid/are_we_there.svg" style="margin: 2em auto;" />
 
 *Nope.*
 
 Well, let's say we want to go *there* from *here* (because we do).. Which way do we have to go?
 
-<img src="/images/posts/pid/this_way.svg" style="margin: 2em auto;" />
+<img src="/assets/blog/pid/this_way.svg" style="margin: 2em auto;" />
 
 I think we can do that. How far will we have to travel?
 
-<img src="/images/posts/pid/how_far.svg" style="margin: 2em auto;" />
+<img src="/assets/blog/pid/how_far.svg" style="margin: 2em auto;" />
 
 Great!
 
