--- a/src/_drafts/2022-06-08-bell-ipv6.md
+++ b/src/_drafts/2022-06-08-bell-ipv6.md
@@ -45,7 +45,7 @@ Both tunneling protocols use IP [Encapsulation](https://en.wikipedia.org/wiki/En
   - Relies on IPv6 compatible servers elsewhere to unwrap the packets and re-send them as native IPv6 traffic on the public internet
   - Used by Xbox consoles for multiplayer networking
 
-I chose 6in4, mostly because I felt like it :laughing:. I'm sure Teredo would have brought me on an equally interesting journey, and maybe I'll see what its all about some other day.
+I chose 6in4, mostly because I felt like it 😆. I'm sure Teredo would have brought me on an equally interesting journey, and maybe I'll see what its all about some other day.
 
 Below is a diagram of a typical 6in4 packet:
 
