--- a/src/_posts/2022-04-06-udm-fan.md
+++ b/src/_posts/2022-04-06-udm-fan.md
@@ -22,7 +22,7 @@ As it turns out, this Linux-based device allows you (like any embedded Linux com
 
 ## Enter: SSH
 
-If you own a UDM-Pro, you surely know how to log in to it via SSH. If not, look it up :smile:.
+If you own a UDM-Pro, you surely know how to log in to it via SSH. If not, look it up 🙂.
 
 With an SSH connection open, the following commands let you control the fans on the device!
 
