--- a/src/_posts/2022-06-13-fedora-36-vp.md
+++ b/src/_posts/2022-06-13-fedora-36-vp.md
@@ -35,4 +35,4 @@ To get VP to launch correctly:
 
 ~~SEO?~~ I will probably run in to this issue again a few more times, so why not write it down instead of digging through a [crash report](https://forums.visual-paradigm.com/t/visual-paradigm-crashes-on-fedora-36/17562/5) from the second page of google.
 
-..and ya. SEO. Lots of juicy keywords are to be had in this document :wink:
+..and ya. SEO. Lots of juicy keywords are to be had in this document 😉
