--- a/src/collections/_photos/2022-03-06-icy-shore.md
+++ b/src/collections/_photos/2022-03-06-icy-shore.md
@@ -4,3 +4,9 @@ title: "Icy Shore"
 date: 2022-03-06
 file: 2022-03-06-icy-shore.jpg
 ---
+
+The surface of Lake Ontario had frozen over the winter, and as the weather began to warm, the ice started cracking into fairly large pieces.
+
+This photo was taken as I was admiring the waves made of ice crashing into the growing icy piles along the shore.
+
+A rather loud experience.
