Prep for importing RetryLife albums

--- a/src/collections/_music/2022-01-06-scale-hop.md
+++ b/src/collections/_music/2022-01-06-scale-hop.md
@@ -2,6 +2,7 @@
 title: Scale Hop
 layout: music
 date: 2022-01-06
+group: personal
 cover_image: /assets/music/scale-hop/cover.jpg
 links:
   "Spotify": https://open.spotify.com/album/6tpUJQlZ1I7bWK4X4pwiOj
