--- a/src/collections/_music/2022-11-25-channels.md
+++ b/src/collections/_music/2022-11-25-channels.md
@@ -2,6 +2,7 @@
 title: Channels
 layout: music
 date: 2022-11-25
+group: personal
 cover_image: /assets/music/channels/cover.jpg
 links:
   "Spotify": https://open.spotify.com/album/25xzDOHs8fN5WQUSnww7kj
